# markon

./: .gitignore  AUTHORS  COPYING  HACKING  Makefile.am  NEWS  NEWS.libexpidus4menu  README.md  TODO  autogen.sh  configure.ac.in
data/: Makefile.am
data/expidus/: Makefile.am  expidus-applications.menu
docs/reference/: Makefile.am  garcon-docs.xml  garcon-sections.txt  markon-docs.xml  markon-sections.txt  markon.types
garcon/: Makefile.am  garcon-config.c  garcon-config.h.in  garcon-environment.c  garcon-environment.h  garcon-menu-directory.c  garcon-menu-directory.h  garcon-menu-element.c  garcon-menu-element.h  garcon-menu-item-action.c  garcon-menu-item-cache.c  garcon-menu-item-cache.h  garcon-menu-item-pool.c  garcon-menu-item-pool.h  garcon-menu-item.c  garcon-menu-item.h  garcon-menu-merger.c  garcon-menu-merger.h  garcon-menu-node.c  garcon-menu-node.h  garcon-menu-parser.c  garcon-menu-parser.h  garcon-menu-separator.c  garcon-menu-separator.h  garcon-menu-tree-provider.c  garcon-menu-tree-provider.h  garcon-menu.c  garcon-menu.h  garcon-private.c  garcon-private.h  garcon.h
garcon-gtk/: Makefile.am  garcon-gtk-menu.c  garcon-gtk-menu.h  garcon-gtk.h  garcon-gtk3-1.pc.in
icons/32x32/: Makefile.am
markon/: Makefile.am  markon-1.pc.in  markon-config.c  markon-config.h.in  markon-environment.c  markon-environment.h  markon-menu-directory.c  markon-menu-directory.h  markon-menu-element.c  markon-menu-element.h  markon-menu-item-action.c  markon-menu-item-action.h  markon-menu-item-cache.c  markon-menu-item-cache.h  markon-menu-item-pool.c  markon-menu-item-pool.h  markon-menu-item.c  markon-menu-item.h  markon-menu-merger.c  markon-menu-merger.h  markon-menu-node.c  markon-menu-node.h  markon-menu-parser.c  markon-menu-parser.h  markon-menu-separator.c  markon-menu-separator.h  markon-menu-tree-provider.c  markon-menu-tree-provider.h  markon-menu.c  markon-menu.h  markon-private.c  markon-private.h  markon.h
markon-gtk/: Makefile.am  markon-gtk-menu.c  markon-gtk-menu.h  markon-gtk.h  markon-gtk3-1.pc.in
po/: POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  lt.po  lv.po  (+26 more)
tests/: Makefile.am  test-display-menu.c  test-menu-parser.c  test-menu-spec.c
